# WaveletsCPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.cpp  common.h  convolution.cpp  convolution.h  cwt.h  main.cpp  waveletPackets.h  wavelets.cpp  wavelets.h  wavelets_coeffs.h  wt.cpp  wt.h
